# mixpanel-delete-profiles

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
mixpanel_delete_profiles/: __init__.py  delete.py  load.py  log.py
